# altv-py-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main.h  resource.cpp  resource.h  runtime.cpp  runtime.h
tools/: build.cmd  build.sh
